--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/DailySummaries/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/DailySummaries/Index.cshtml
@@ -1,18 +1,19 @@
-﻿@model DirectAgents.Web.Areas.ProgAdmin.Models.DailySummariesVM
+﻿@using System.Globalization
+@model DirectAgents.Web.Areas.ProgAdmin.Models.DailySummariesVM
 @{
     bool super = Request.QueryString["super"] == "1";
 }
 
 @section scripts {
-@if (!Model.CustomDates)
-{
-<script>
+    @if (!Model.CustomDates)
+    {
+        <script>
     function ChangeMonth(month) {
         var url = '@Html.Raw(Url.Action("Index", new { acctId = Model.ExtAccount.Id, start = "startVal" }))';
         location.href = url.replace('startVal', month);
     }
-</script>
-}
+        </script>
+    }
 }
 <h2>Daily Summaries (Raw)</h2>
 
@@ -23,9 +24,9 @@
 else
 {
     <div style="margin-bottom:10px">
-    <form>
-        @Html.DropDownList("month", (SelectList)ViewBag.ChooseMonthSelectList, new { onchange = "ChangeMonth(this.value)" })
-    </form>
+        <form>
+            @Html.DropDownList("month", (SelectList)ViewBag.ChooseMonthSelectList, new { onchange = "ChangeMonth(this.value)" })
+        </form>
     </div>
 }
 
@@ -38,43 +39,54 @@ else
     }
 }
 <table>
-<tr>
-    <th></th>
-    <th>Date</th>
-    <th>Impressions</th>
-    <th>AllClicks</th>
-    <th>Clicks</th>
-    <th>PostClick Conv</th>
-    <th>PostClick Rev</th>
-    <th>PostView Conv</th>
-    <th>PostView Rev</th>
-    <th>Cost</th>
-</tr>
-@foreach (var ds in Model.DailySummaries)
-{
-<tr>
-    <td>
-    @if (super) {
-        @Html.ActionLink("Edit", "Edit", new { acctid = ds.AccountId, date = ds.Date.ToShortDateString() })
+    <tr>
+        <th></th>
+        <th>Date</th>
+        <th>Impressions</th>
+        <th>AllClicks</th>
+        <th>Clicks</th>
+        <th>PostClick Conv</th>
+        <th>PostClick Rev</th>
+        <th>PostView Conv</th>
+        <th>PostView Rev</th>
+        <th>Cost</th>
+        @foreach (var metric in Model.MetricNames)
+        {
+            <th>@metric.Key</th>
+        }
+    </tr>
+    @foreach (var ds in Model.DailySummaries)
+    {
+        <tr>
+            <td>
+                @if (super)
+                {
+                    @Html.ActionLink("Edit", "Edit", new { acctid = ds.AccountId, date = ds.Date.ToString("d", CultureInfo.InvariantCulture) })
+                }
+            </td>
+            <td>@ds.Date.ToString("d", CultureInfo.InvariantCulture)</td>
+            <td style="text-align:right">@ds.Impressions</td>
+            <td style="text-align:right">@ds.AllClicks</td>
+            <td style="text-align:right">@ds.Clicks</td>
+            <td style="text-align:right">@ds.PostClickConv</td>
+            <td style="text-align:right">@ds.PostClickRev</td>
+            <td style="text-align:right">@ds.PostViewConv</td>
+            <td style="text-align:right">@ds.PostViewRev</td>
+            <td style="text-align:right">@ds.Cost</td>
+            @foreach (var metricName in Model.MetricNames)
+            {
+                var metric = ds.Metrics.FirstOrDefault(x => x.MetricType.Id == metricName.Value);
+                var metricValue = metric == null ? 0.0M : metric.Value;
+                <td>@(metricValue.ToString("F"))</td>
+            }
+        </tr>
     }
-    </td>
-    <td>@ds.Date.ToShortDateString()</td>
-    <td style="text-align:right">@ds.Impressions</td>
-    <td style="text-align:right">@ds.AllClicks</td>
-    <td style="text-align:right">@ds.Clicks</td>
-    <td style="text-align:right">@ds.PostClickConv</td>
-    <td style="text-align:right">@ds.PostClickRev</td>
-    <td style="text-align:right">@ds.PostViewConv</td>
-    <td style="text-align:right">@ds.PostViewRev</td>
-    <td style="text-align:right">@ds.Cost</td>
-</tr>
-}
 </table>
 <br />
 @if (!Model.DailySummaries.Any() && super)
 {
     DateTime yesterday = DateTime.Today.AddDays(-1);
     DateTime date = Model.Start.HasValue ? Model.Start.Value : new DateTime(yesterday.Year, yesterday.Month, 1);
-    @Html.ActionLink("New", "Edit", new { date = date.ToShortDateString(), acctId = Model.ExtAccount.Id, create = true })
+    @Html.ActionLink("New", "Edit", new { date = date.ToString("d", CultureInfo.InvariantCulture), acctId = Model.ExtAccount.Id, create = true })
     <br />
 }
