--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/Index.cshtml
@@ -33,9 +33,11 @@
         @Html.ActionLink("Raw", "ExtAccount", "Stats", new { acctid = extAcct.Id }, null)
     </td>
     <td>
-        @Html.ActionLink("Strategies", "Strategies", new { id = extAcct.Id }, null) |
-        @Html.ActionLink("AdSets", "AdSets", new { id = extAcct.Id }, null) |
-        @Html.ActionLink("Creatives", "Index", "TDads", new { acctid = extAcct.Id }, null)
+        @Html.ActionLink("Strategies", "Strategies", "ExtAccounts", new { id = extAcct.Id }, null) |
+        @Html.ActionLink("Creatives", "Index", "TDads", new { id = extAcct.Id }, null) |
+        @Html.ActionLink("AdSets", "AdSets", "ExtAccounts", new { id = extAcct.Id }, null) |
+        @Html.ActionLink("Keywords", "Keywords", "ExtAccounts", new { id = extAcct.Id }, null) |
+        @Html.ActionLink("SearchTerms", "SearchTerms", "ExtAccounts", new { id = extAcct.Id }, null)
     </td>
     <td>@extAcct.CreativeURLFormat</td>
 </tr>
