--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/PlatformBudgetInfos/Edit.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/PlatformBudgetInfos/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model DirectAgents.Domain.Entities.CPProg.PlatformBudgetInfo
+﻿@using System.Globalization
+@model DirectAgents.Domain.Entities.CPProg.PlatformBudgetInfo
 
 @* Note: duplicated in BudgetInfos.Edit *@
 @section scripts {
@@ -43,7 +44,7 @@
             </table>
             <br />
             <input type="submit" value="Save" onclick="SaveBudgetInfo()" />
-            &nbsp;@Html.ActionLink("cancel", "Edit", "BudgetInfos", new { campId = Model.CampaignId, date = Model.Date.ToShortDateString() }, null)
+            &nbsp;@Html.ActionLink("cancel", "Edit", "BudgetInfos", new { campId = Model.CampaignId, date = Model.Date.ToString("d", CultureInfo.InvariantCulture) }, null)
         </div>
     }
 </fieldset>
