--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Dashboard/Proto.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Dashboard/Proto.cshtml
@@ -1,4 +1,5 @@
-﻿@model DirectAgents.Web.Areas.AB.Models.ProtoVM
+﻿@using System.Globalization
+@model DirectAgents.Web.Areas.AB.Models.ProtoVM
 
 <h2>Single Client Detail - Prototype</h2>
 
@@ -49,7 +50,7 @@ Payments Received
 @foreach (var payment in Model.ABClient.ProtoPayments.OrderBy(x => x.Date))
 {
     <tr>
-        <td>@payment.Date.ToShortDateString()</td>
+        <td>@payment.Date.ToString("d", CultureInfo.InvariantCulture)</td>
         <td style="text-align:right">@payment.TotalValue()</td>
     </tr>
 }
