--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Campaigns/Edit.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Campaigns/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model DirectAgents.Domain.Entities.CPProg.Campaign
+﻿@using System.Globalization
+@model DirectAgents.Domain.Entities.CPProg.Campaign
 @{
     string advId = (string)Session["advId"]; // for filtering when returning back to Index
 }
@@ -68,7 +69,7 @@
         {
             var pbis = Model.PlatformBudgetInfosFor(bi.Date).OrderBy(pbi => pbi.Platform.Name);
             <tr>
-                <td>@Html.ActionLink("Edit", "Edit", "BudgetInfos", new { campId = bi.CampaignId, date = bi.Date.ToShortDateString() }, null)</td>
+                <td>@Html.ActionLink("Edit", "Edit", "BudgetInfos", new { campId = bi.CampaignId, date = bi.Date.ToString("d", CultureInfo.InvariantCulture) }, null)</td>
                 <td>@bi.Date.ToString("MMM yyyy")</td>
                 <td style="text-align:right">@bi.MediaSpend.ToString("C")</td>
                 <td style="text-align:center">@bi.MgmtFeePct.ToString("#0.##### \\%")</td>
@@ -77,7 +78,7 @@
                 @if (!pbis.Any())
                 {
                     <td>@Html.ActionLink("Delete", "Delete", "BudgetInfos",
-                                         new { campId = bi.CampaignId, date = bi.Date.ToShortDateString() },
+                                         new { campId = bi.CampaignId, date = bi.Date.ToString("d", CultureInfo.InvariantCulture) },
                                          new { onclick = "if (!confirm('Are you sure?')) return false" })</td>
                 }
             </tr>
@@ -92,7 +93,7 @@
                 <br />
                 foreach (var month in months)
                 {
-                    @Html.ActionLink(month.ToString("MMM yyyy"), "CreateNew", "BudgetInfos", new { campId = Model.Id, date = month.ToShortDateString() }, null)
+                    @Html.ActionLink(month.ToString("MMM yyyy"), "CreateNew", "BudgetInfos", new { campId = Model.Id, date = month.ToString("d", CultureInfo.InvariantCulture) }, null)
                     <text><br /></text>
                 }
             }
