--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/DailySummaries/Edit.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/DailySummaries/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model DirectAgents.Domain.Entities.CPProg.DailySummary
+﻿@using System.Globalization
+@model DirectAgents.Domain.Entities.CPProg.DailySummary
 @{
     // for filtering when returning back to Index
     string start = (string)Session["start"];
@@ -18,7 +19,7 @@
             <table>
                 <tr>
                     <td>@Html.LabelFor(m => m.Date)</td>
-                    <td>@Model.Date.ToShortDateString()</td>
+                    <td>@Model.Date.ToString("d", CultureInfo.InvariantCulture)</td>
                 </tr>
                 <tr>
                     <td>@Html.LabelFor(m => m.Cost)</td>
