--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/Strategies.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/Strategies.cshtml
@@ -3,17 +3,19 @@
 <h2>Strategies</h2>
 
 <table>
-<tr>
-    <th>Id</th>
-    <th>Name</th>
-    <th>ExternalId</th>
-</tr>
+    <tr>
+        <th>Id</th>
+        <th>Name</th>
+        <th>ExternalId</th>
+        <th>Type</th>
+    </tr>
 @foreach (var strat in Model)
 {
-<tr>
-    <td>@strat.Id</td>
-    <td>@strat.Name</td>
-    <td>@strat.ExternalId</td>
-</tr>
+    <tr>
+        <td>@strat.Id</td>
+        <td>@strat.Name</td>
+        <td>@strat.ExternalId</td>
+        <td>@(strat.Type != null ? strat.Type.Name : "")</td>
+    </tr>
 }
 </table>
