--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/SearchAdmin/Views/SearchAccounts/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/SearchAdmin/Views/SearchAccounts/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<DirectAgents.Domain.Entities.CPSearch.SearchAccount>
+﻿@using System.Globalization
+@model IEnumerable<DirectAgents.Domain.Entities.CPSearch.SearchAccount>
 @{
     string spId = Request.Params["spid"];
     bool oneProfile = !String.IsNullOrWhiteSpace(spId);
@@ -27,7 +28,7 @@
             <td>@sa.Channel</td>
             <td>@sa.AccountCode</td>
             <td>@sa.ExternalId</td>
-            <td style="text-align:center">@sa.MinSynchDate.ToShortDateString()</td>
+            <td style="text-align:center">@sa.MinSynchDate.ToString("d", CultureInfo.InvariantCulture)</td>
             <td>@sa.RevPerOrder</td>
         </tr>
     }
